--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -3,9 +3,24 @@ body {
     color: #ffffff;
 }
 
-#container {
+#top {
+    height: auto;
     width: 580px;
-    height: 250px;
+    margin-left: auto; 
+    margin-right: auto;
+    margin-bottom: auto;
+    position: absolute;
+    bottom: 100;
+}
+
+#logo {
+    float: left;
+}
+
+#container {
+    width: 570px;
+    height: 190px;
+    padding: 15px;
     margin: auto;
     text-align: center;
 }
@@ -13,8 +28,8 @@ body {
 .box {
     float: left;
     width: 150px; 
-    height: 180px;
-    margin: 20px 20px;
+    height: 150px;
+    margin: 15px 15px;
 }
 
 #footer {
@@ -24,4 +39,67 @@ body {
     margin-right: auto;
     position: relative;
     bottom: 0;
+}
+
+#toggle-button {
+    float: right;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 70px;
+    height: 26px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+input:checked + .slider {
+    background-color: #4965d9;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #4965d9;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(44px);
+    -ms-transform: translateX(44px);
+    transform: translateX(44px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
 }
